## PLUXML 5.8.6 (yyyy/mm/dd) ##
[+] Update PHPMailer 6.2.0 : security fixes and PHP 8.0 compatibility (P3ter)
FIX Missing thumbnail in first article #518 (bazooka07)

## PLUXML 5.8.5 (2021/01/11) ##
[+] Refine url rewriting rule #497 (bazooka07)
FIX Allow punctuation in articles and pages titles #505 (bazooka07)
FIX plxShow::catList() and plxShow::catId multiples article with same category #495 (bazooka07)
FIX Check if resetting password is not allowed before password change #500 (lolo3129, P3ter)
FIX Error with password reset token generation (P3ter)
FIX Check if a user profil is defined in the current session before changing it when necessary #511 (bazooka07)
FIX Allow comments default value #516 (bazooka07)

## PLUXML 5.8.4 (2020/09/07) ##
[+] Add mailto link on comment author's e-mail #512 (bazooka07)
[+] Disable removing short words on urlify (P3ter)
FIX Icon's CSS in medias manager (P3ter)
FIX Reduce notification bar width (P3ter)
FIX Error "Constant PLX_SITE_LANG already defined" (bazooka07)
FIX Do not use urlify for links (P3ter)
FIX Medias sorting in the backoffice (P3ter, sudwebdesign)
FIX Medias breadcrumb in the backoffice (P3ter, sudwebdesign)
FIX 404 error with tracking params in the URL (bazooka07)
FIX Display thumbnail in administration for SVG medias #482 #479 (bazooka07)

## PLUXML 5.8.3 (2020/05/19) ##
[+] New Fontello icons on authentification page and in the admin panel (bazooka07)
[+] Enhancement for CSRF token #385 (bazooka07)
[+] New "rename" and "copy to clipboard" icons in medias administration page #387 (bazooka07)
[+] plxMotor and plxFeed regex refacto #380 (P3ter, bazooka07)
[+] plxToken and plxCapcha optimisations #406 (bazooka07)
[+] plxShow->artThumbnail can have a link to the article #426 (Thatoo)
FIX Articles and static pages with underscores are not visible #380 (P3ter)
FIX Headline and Tags toggles always closed in article edition #382 (sudwebdesign)